Fix footer alignement

--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -5,4 +5,5 @@ footer{
 	text-align:center;
 	position: fixed;
 	bottom:0;
+	line-height:30px;
 }
